Netlify CI Test

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -71,16 +71,20 @@ li {
   list-style-type: none;
 }
 
-.poster-section {
+.poster-wrapper {
   grid-area: article;
 
   height: 100vh;
-  padding-right: 20px;
+}
+
+.poster-section {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #poster-title {
   margin-left: 5px;
-  margin-bottom: 15px;
 }
 
 #poster {
@@ -95,3 +99,16 @@ li {
   justify-content: start;
   gap: 10px;
 }
+
+.titles {
+  display: none;
+}
+
+
+@media only screen and (min-width: 991px) and (max-width: 1024px) {
+
+}
+@media only screen and (min-width: 769px) and (max-width: 990px) {}
+@media only screen and (min-width: 481px) and (max-width: 768px) {}
+@media only screen and (min-width: 281px) and (max-width: 480px) {}
+@media only screen and (max-width: 280px) {}
